package fr.uga.miage.m1.my_project.model.enums;

import java.io.Serializable;

public enum TypeAction implements Serializable {
    COOPERER,
    TRAHIR,
    ABONDONNER
}
